--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-597-neural-glass
         <div class="hero-content">
             <div class="hero-subtitle">Welcome to my Portfolio</div>
             <h1>ABEL EYASU</h1>
-            <img src="profile.jpg" alt="Abel Eyasu Portfolio" class="portfolio-image">
+            <img src="images/profile.jpg" alt="Abel Eyasu Portfolio" class="portfolio-image">
             <div class="hero-description">
                 <p>I am a highly organized and proactive Virtual Assistant, Executive Assistant, and Administrative Professional with over 4 years of experience supporting executives, entrepreneurs, and teams in streamlining operations and driving efficiency.</p>
             </div>
@@ -558,3 +558,4 @@ https://templatemo.com/tm-597-neural-glass
 </body>
 
 </html>
+
