--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ https://templatemo.com/tm-597-neural-glass
 <h2 class="section-title">My Education & Certificates</h2>
 <div class="Education">
     <div class="timeline-content glass">
-                    <div class="timeline-year">04/2021 – 01/2022
+                    <div class="timeline-year">2025
                     </div>
                     <h4>Full-Stack Software Engineering Nano Degree- ALX
                     </h4>
@@ -439,7 +439,7 @@ https://templatemo.com/tm-597-neural-glass
     </div>
 
     <div class="timeline-content glass">
-                    <div class="timeline-year">04/2021 – 01/2022
+                    <div class="timeline-year">2021
                     </div>
                     <h4>Accounting and Finance Diploma- Wegagen College
                     </h4>
@@ -447,7 +447,7 @@ https://templatemo.com/tm-597-neural-glass
     </div>
 
     <div class="timeline-content glass">
-                    <div class="timeline-year">04/2021 – 01/2022
+                    <div class="timeline-year">2023
                     </div>
                     <h4>Digital Marketing Nano Degree- Digital Marketing Institute</h4>
                     <p>Digitall Marketer certified in the core pillars of modern marketing: SEO, SEM, social media, and data analytics. Equipped to develop and execute data-driven strategies that increase brand awareness, engage target audiences, and drive measurable conversions.</p>
@@ -558,6 +558,7 @@ https://templatemo.com/tm-597-neural-glass
 </body>
 
 </html>
+
 
 
 
