--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@ https://templatemo.com/tm-597-neural-glass
                     <p>Craft engaging blogs, posts, and email campaigns aligned with brand voice.</p>
                 </div>
             </div>
+            <br>
+            <div class="hexagon">
+                <div class="hexagon-inner glass">
+                    <div class="hexagon-icon">🖋️</div>
+                    <h4>Web Development</h4>
+                    <p>Lang=html, css, javascript, python, react<br> Tools= Github, VPS, cPanel, Figma</p>
+                </div>
+            </div>
+            <br>
             <div class="hexagon">
                 <div class="hexagon-inner glass">
                     <div class="hexagon-icon">📢</div>
@@ -558,6 +567,7 @@ https://templatemo.com/tm-597-neural-glass
 </body>
 
 </html>
+
 
 
 
