--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ https://templatemo.com/tm-597-neural-glass
             <div class="feature-row">
                 <div class="feature-content glass">
                     <div class="feature-icon">🧠</div>
-                    <h3>Project Assistant</h3>
-                    <p>Advanced AI-driven interfaces that adapt to your consciousness patterns, creating personalized digital experiences that evolve with your neural pathways.</p>
+                    <h3>Project Assistant and Management</h3>
+                    <p>Project Assistant with 4+ years’ experience driving on-time project delivery and boosting team efficiency through streamlined workflows and clear task coordination.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -159,7 +159,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">⚡</div>
                     <h3>Operation Assistant</h3>
-                    <p>Instantaneous data processing through quantum tunneling algorithms, delivering response times that exist outside conventional spacetime constraints.</p>
+                    <p>Operations Assistant with 4+ years’ experience optimizing workflows and improving team productivity, ensuring smooth operations and measurable efficiency gains.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -177,7 +177,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">🌐</div>
                     <h3>CRM Management</h3>
-                    <p>Seamless synchronization across multiple reality layers, ensuring your digital presence remains consistent throughout parallel dimensions.</p>
+                    <p>Experienced in CRM management with 2+ years optimizing client data, streamlining communication, and improving customer engagement for measurable business growth.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -195,7 +195,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">💡</div>
                     <h3>Project Task Tracking</h3>
-                    <p>Cutting-edge AI algorithms powering smarter solutions that learn and adapt in real time to your workflow and preferences.</p>
+                    <p>Skilled in project task tracking with 4+ years’ experience ensuring deadlines are met, workflows stay organized, and teams achieve measurable project outcomes.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -212,7 +212,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">🚀</div>
                     <h3>Travel Planning</h3>
-                    <p>Performance-tuned interfaces that maximize efficiency while minimizing resource consumption across platforms.</p>
+                    <p>Experienced in coordinating complex travel schedules, managing logistics, and ensuring smooth, timely, and cost-efficient trips for teams and executives.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -229,7 +229,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">🔧</div>
                     <h3>Research and Data Entry</h3>
-                    <p>Tailored digital tools designed to streamline workflow and automate repetitive tasks efficiently.</p>
+                    <p>Turning raw data into actionable insights, I’ve spent 4+ years efficiently collecting, organizing, and verifying information to support informed business decisions and drive measurable outcomes.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -246,7 +246,7 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="feature-content glass">
                     <div class="feature-icon">🌟</div>
                     <h3>Client Communication</h3>
-                    <p>Interfaces designed with the future in mind, ensuring scalability, adaptability, and long-term sustainability of digital solutions.</p>
+                    <p>I excel at building strong relationships, addressing inquiries promptly, and ensuring clear, professional communication that drives client satisfaction and loyalty.</p>
                 </div>
                 <div class="feature-visual glass">
                     <iframe 
@@ -567,6 +567,7 @@ https://templatemo.com/tm-597-neural-glass
 </body>
 
 </html>
+
 
 
 
