--- a/index.html
+++ b/index.html
@@ -726,7 +726,6 @@ https://templatemo.com/tm-597-neural-glass
         </div>
     </footer>
 <script src="templatemo-neural-scripts.js"></script>
-
 <script>
 /* ========== JS for Slider & Animations ========== */
 const slidesContainer = document.querySelector(".slides-container");
@@ -734,33 +733,49 @@ const slides = document.querySelectorAll(".slide");
 let currentSlide = 0;
 
 function showSlide(index) {
-  if (index < 0) currentSlide = slides.length - 1;
-  else if (index >= slides.length) currentSlide = 0;
-  else currentSlide = index;
+  if (index < 0) {
+    currentSlide = slides.length - 1;
+  } else if (index >= slides.length) {
+    currentSlide = 0;
+  } else {
+    currentSlide = index;
+  }
 
+  // Move the slides container
   slidesContainer.style.transform = `translateX(-${currentSlide * 100}%)`;
+
+  // Animate the current slide
   animateSlide(slides[currentSlide]);
 }
 
-// Attach buttons
-document.querySelectorAll(".prev-slide").forEach(btn =>
-  btn.addEventListener("click", () => showSlide(currentSlide - 1))
-);
-document.querySelectorAll(".next-slide").forEach(btn =>
-  btn.addEventListener("click", () => showSlide(currentSlide + 1))
-);
+document.querySelector(".prev-slide").addEventListener("click", () => showSlide(currentSlide - 1));
+document.querySelector(".next-slide").addEventListener("click", () => showSlide(currentSlide + 1));
 
 function animateSlide(slide) {
-  // Animate donut
+  // Animate donut chart
   const donut = slide.querySelector(".donut");
-  const percent = donut.dataset.percent;
-  const circle = donut.querySelector(".donut-fg");
-  const offset = 314 - (314 * percent) / 100;
-  circle.style.strokeDashoffset = offset;
+  if (donut) {
+    const percent = donut.dataset.percent;
+    const circle = donut.querySelector(".donut-fg");
+    const offset = 314 - (314 * percent) / 100;
+    circle.style.strokeDashoffset = offset;
+
+    // Animate the text inside donut
+    const donutText = donut.querySelector(".donut-text");
+    let count = 0;
+    const interval = setInterval(() => {
+      if (count >= percent) {
+        clearInterval(interval);
+      } else {
+        count++;
+        donutText.textContent = `${count}%`;
+      }
+    }, 10);
+  }
 
   // Animate line skills
   slide.querySelectorAll(".progress-bar").forEach(bar => {
-    bar.style.width = bar.dataset.width; // <-- ensure HTML uses data-width="xx%"
+    bar.style.width = bar.dataset.width; // Make sure HTML has data-width="XX%"
   });
 }
 
@@ -771,6 +786,7 @@ showSlide(0);
 </body>
 
 </html>
+
 
 
 
