--- a/index.html
+++ b/index.html
@@ -392,6 +392,16 @@ https://templatemo.com/tm-597-neural-glass
             
             <div class="timeline-item">
                 <div class="timeline-content glass">
+                    <div class="timeline-year">06/2025 – 02/2026
+</div>
+                    <h4>Mysource Digital Marketing – Operations Assistant Manager</h4>
+                    <p>Coordinated daily operations, optimized workflows, and supported cross-team delivery in a fast-paced digital marketing environment.</p>
+                </div>
+                <div class="timeline-dot"></div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-content glass">
                     <div class="timeline-year">12/2023 – 06/2025
 </div>
                     <h4>Plum Networks – Project & Development Assistant</h4>
